# CTFd

./: .babelrc  .codecov.yml  .ctfd_secret_key  .dockerignore  .env  .env.example  .eslintrc.js  .flaskenv  .gitattributes  .gitignore  .gitmodules  .isort.cfg  .prettierignore  .sample.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile-alpine  LICENSE  Makefile  Procfile  README.md  SECURITY.md  SETUP.md  Vagrantfile  app.json  babel.cfg  backups.md  cprepare.sh  crowdin.yml  ctfd.db.bak  ctfd.ini  deploy-heroku.sh  dev-entrypoint.sh  development.txt  docker-compose-production.yml  docker-compose-run.sh  docker-compose-traefik.yml  docker-compose.dev.yml  (+50 more)
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
.semaphore/: semaphore.yml
CTFd/: __init__.py  admin.py  auth.py  challenges.py  config.ini  config.py  countries.py  ctfd.db  ctfd.db.old  errors.py  language.py  models.py  scoreboard.py  share.py  teams.py  users.py  utils.py  views.py  writeups.py
Docker/: Dockerfile  README.md  ctfd  ctfd-docker.sh
Gestion_VPN/: Dockerfile
aws/: README.md  gunicorn.service  gunicorn.sh  main.tf  nginx.conf  outputs.tf  terraform.tfvars.example  userdata.sh  variables.tf
backup/: id_rsa.pub  readme
compose/: .env  docker-compose.yml  nginx.conf
ctfd-backup/: Dockerfile  README.md  backup.py  config.py  requirements.txt
dd-inviter/: Dockerfile  docker-entrypoint.sh  inviter.py
docker/: Dockerfile  build
docs/: conf.py  configuration.rst  contributing.rst  deployment.rst  index.rst  management.rst  plugin walkthrough.rst  plugins.rst  scoring.rst  themes.rst
first_blood_notification/: Dockerfile  crontab.txt  requirements.txt
frp/: frpc.ini  frps.ini
launchers/: ctfd.openbsd56
manifests/: cache-service.yaml  cache-service.yaml.txt  ctfd-claim0-pvc.yaml  ctfd-claim1-pvc.yaml  ingress.yaml  (+14 more)
(+3302 files in other folders)
