[project]
name = "CTFd"
version = "3.7.7"
description = "CTFs as you need them"
authors = [
    {name = "Kevin Chung",email = "kchung@ctfd.io"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (==2.0.3)",
    "werkzeug (==2.0.3)",
    "jinja2 (==3.1.6)",
    "flask-sqlalchemy (==2.5.1)",
    "flask-caching (==2.0.2)",
    "flask-migrate (==2.5.3)",
    "flask-script (==2.0.6)",
    "sqlalchemy (==1.4.48)",
    "sqlalchemy-utils (==0.41.1)",
    "passlib (==1.7.4)",
    "bcrypt (==4.0.1)",
    "requests (==2.32.3)",
    "pymysql[rsa] (==1.0.2)",
    "gunicorn (==23.0.0)",
    "dataset (==1.6.2)",
    "cmarkgfm (==2024.1.14)",
    "redis (==4.5.5)",
    "gevent (==23.9.1)",
    "python-dotenv (==0.13.0)",
    "flask-restx (==1.1.0)",
    "flask-marshmallow (==0.10.1)",
    "marshmallow-sqlalchemy (==0.17.0)",
    "boto3 (==1.35.27)",
    "marshmallow (==2.20.2)",
    "pydantic (==1.6.2)",
    "wtforms (==2.3.1)",
    "python-geoacumen-city (==2023.4.15)",
    "maxminddb (==1.5.4)",
    "tenacity (==6.2.0)",
    "pybluemonday (==0.0.14)",
    "freezegun (==1.2.2)",
    "flask-babel (==2.0.0)",
    "pillow (==10.1.0)",
    "cffi (==1.17.1)",
    "six (==1.16.0)",
    "urllib3 (==1.26.20)"
]

[tool.poetry]
packages = [
  { include = "CTFd" },
]

[tool.poetry.group.dev.dependencies]
pip-tools = "5.4.0"
pytest = "7.3.1"
pytest-randomly = "3.12.0"
coverage = "7.2.3"
moto = "4.1.11"
bandit = "1.6.2"
flask-profiler = "1.8.1"
pytest-xdist = "3.2.1"
pytest-cov = "4.0.0"
sphinx-rtd-theme = "0.4.3"
flask-debugtoolbar = "0.11.0"
faker = "4.1.0"
pipdeptree = "2.2.0"
pytest-sugar = "0.9.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
